--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,10 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "backend/main.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
+    "functions": {
+        "backend/main.py": {
+            "runtime": "@vercel/python"
         }
-    ],
+    },
     "rewrites": [
         {
             "source": "/api/(.*)",
