--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-facebook-pixel": "^1.0.4",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "swr": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
