--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.3",
     "react-facebook-pixel": "^1.0.4",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.7.0",
     "swr": "^2.4.0"
   },
   "devDependencies": {
